--- a/new_CustomerEmbed.html
+++ b/new_CustomerEmbed.html
@@ -9,5 +9,6 @@
   <script data-main="new_CustomerEmbed" src="new_require.js"></script>
   
   <!--  lay out Knockout view  -->
+  <h3>Data for <span data-bind="text: fullname"></span></h3>
 </body>
 </html>
